src/objects/Field_Sales_Project_Members__c.object
<CustomObject>
    <fields>
        <fullName>UserCountry__c</fullName>
        <defaultValue>CASE($User.User_Country__c,  
&quot;Australia&quot;,&quot;Australia&quot;,
&quot;Austria&quot;,&quot;Austria&quot;,
&quot;Belarus&quot;,&quot;Belarus&quot;,
&quot;Belgium&quot;,&quot;Belgium&quot;,
&quot;Brazil&quot;,&quot;Brazil&quot;,
&quot;Canada&quot;, &quot;Canada&quot;,
&quot;China&quot;,&quot;China&quot;,
&quot;Denmark&quot;,&quot;Denmark&quot;,
&quot;Finland&quot;,&quot;Finland&quot;,
&quot;France&quot;,&quot;France&quot;,
&quot;Germany&quot;,&quot;Germany&quot;,
&quot;Holland&quot;,&quot;Holland&quot;,
&quot;Hong Kong&quot;,&quot;Hong Kong&quot;,
&quot;India&quot;,&quot;India&quot;,
&quot;Indonesia&quot;,&quot;Indonesia&quot;,
&quot;Italy&quot;,&quot;Italy&quot;,
&quot;Kuwait&quot;,&quot;Kuwait&quot;,
&quot;Egypt&quot;,&quot;Egypt&quot;,
&quot;Morocco&quot;,&quot;Morocco&quot;,
&quot;Jordan&quot;,&quot;Jordan&quot;,
&quot;Algeria&quot;,&quot;Algeria&quot;,
&quot;Tunisia&quot;,&quot;Tunisia&quot;,
&quot;Cameroun&quot;,&quot;Cameroun&quot;,
&quot;Senegal&quot;,&quot;Senegal&quot;,
&quot;Oman&quot;,&quot;Oman&quot;,
&quot;Iran&quot;,&quot;Iran&quot;,
&quot;Iraq&quot;,&quot;Iraq&quot;,
&quot;Libya&quot;,&quot;Libya&quot;,
&quot;Yemen&quot;,&quot;Yemen&quot;,
&quot;Bahrain&quot;,&quot;Bahrain&quot;,
&quot;Mauritius&quot;,&quot;Mauritius&quot;,
&quot;Maldives&quot;,&quot;Maldives&quot;,
&quot;Japan&quot;,&quot;Japan&quot;,
&quot;Kazakhstan&quot;,&quot;Kazakhstan&quot;,
&quot;Lebanon&quot;,&quot;Lebanon&quot;,
&quot;Luxembourg&quot;,&quot;Luxembourg&quot;,
&quot;Malaysia&quot;,&quot;Malaysia&quot;,
&quot;Morocco&quot;,&quot;Morocco&quot;,
&quot;New Zealand&quot;,&quot;New Zealand&quot;,
&quot;Norway&quot;,&quot;Norway&quot;,
&quot;Philippines&quot;,&quot;Philippines&quot;,
&quot;Portugal&quot;,&quot;Portugal&quot;,
&quot;Poland&quot;,&quot;Poland&quot;,
&quot;Russia&quot;,&quot;Russia&quot;,
&quot;Saudi Arabia&quot;,&quot;Saudi Arabia&quot;,
&quot;Singapore&quot;,&quot;Singapore&quot;,
&quot;Slovakia&quot;,&quot;Slovakia&quot;,
&quot;South Africa&quot;,&quot;South Africa&quot;,
&quot;South Korea&quot;,&quot;South Korea&quot;,
&quot;Spain&quot;,&quot;Spain&quot;,
&quot;Sweden&quot;,&quot;Sweden&quot;,
&quot;Switzerland&quot;,&quot;Switzerland&quot;,
&quot;Taiwan&quot;,&quot;Taiwan&quot;,
&quot;Thailand&quot;,&quot;Thailand&quot;,
&quot;Turkey&quot;,&quot;Turkey&quot;,
&quot;UAE&quot;,&quot;UAE&quot;,
&quot;UK&quot;, &quot;UK&quot;,
&quot;Ukraine&quot;, &quot;Ukraine&quot;,
&quot;USA&quot;,&quot;USA&quot;,
&quot;Vietnam&quot;,&quot;Vietnam&quot;,
&quot;HQ: SE&quot;)</defaultValue>
        <label>User Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>DEX</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Holland</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>HQ: SE</fullName>
                </value>
                <value>
                    <fullName>Hungary</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Indonesia</fullName>
                </value>
                <value>
                    <fullName>Ireland</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Jordan</fullName>
                </value>
                <value>
                    <fullName>Kazakhstan</fullName>
                </value>
                <value>
                    <fullName>Kuwait</fullName>
                </value>
                <value>
                    <fullName>Latvia</fullName>
                </value>
                <value>
                    <fullName>Lithuania</fullName>
                </value>
                <value>
                    <fullName>Luxembourg</fullName>
                </value>
                <value>
                    <fullName>Malaysia</fullName>
                </value>
                <value>
                    <fullName>Malta</fullName>
                </value>
                <value>
                    <fullName>New Zealand</fullName>
                </value>
                <value>
                    <fullName>Norway</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VoucherCode__c</fullName>
        <label>Voucher Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_Source__c</fullName>
        <description>Used to indicate the source of the lead - text for flexibility of the data</description>
        <label>3rd Party Source</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Sales Lead</label>
    <listViews>
        <fullName>ALL_Open_Sales_Leads_inkl_Status</fullName>
        <columns>ChannelPriority__c</columns>
        <columns>Channel__c</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Account_City__c</columns>
        <columns>Brand__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Hot_prospect__c</columns>
        <columns>Dealer__c</columns>
        <columns>Status__c</columns>
        <columns>Campaign__c</columns>
        <columns>Field_Sales_Project__c</columns>
        <filterScope>Everything</filterScope>
        <label>ALL Open Sales Leads inkl. Status</label>
        <sharedTo>
            <roleAndSubordinatesInternal>D_A_CH_Managing_Director</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ANZ_All_Sales_Leads</fullName>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>Category__c</columns>
        <columns>Brand__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Sales_Rep__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UserCountry__c</field>
            <operation>equals</operation>
            <value>Australia,New Zealand</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Field_Sales_Project_Members__c.Outside_Sales_Lead</value>
        </filters>
        <label>ANZ: All Sales Leads</label>
        <sharedTo>
            <roleAndSubordinatesInternal>ANZ_CRM_Analyst</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HK_All_Sales_Leads</fullName>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>Category__c</columns>
        <columns>Brand__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Campaign__c</columns>
        <columns>Sales_Rep__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UserCountry__c</field>
            <operation>equals</operation>
            <value>Hong Kong</value>
        </filters>
        <label>HK: All Sales Leads</label>
        <sharedTo>
            <roleAndSubordinatesInternal>HK_CRM_Analyst</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IT_Sales_Lead_By_Marketing</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Category__c</columns>
        <columns>Brand__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>Sales_Rep__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Channel__c</field>
            <operation>equals</operation>
            <value>Marketing</value>
        </filters>
        <filters>
            <field>UserCountry__c</field>
            <operation>equals</operation>
            <value>Italy</value>
        </filters>
        <label>IT: Sales Lead By Marketing</label>
        <sharedTo>
            <roleAndSubordinatesInternal>IT_CRM_Analyst</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Indonesia_All_Leads</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Account_City__c</columns>
        <columns>Account_State_Province__c</columns>
        <columns>Brand__c</columns>
        <columns>Category__c</columns>
        <columns>Sales_Rep__c</columns>
        <columns>Source__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>Indonesia: All Leads</label>
        <sharedTo>
            <roleAndSubordinatesInternal>IDN_CRM_Analyst</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_CDM_Open_Sales_Leads</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Category__c</columns>
        <columns>Brand__c</columns>
        <columns>Hot_prospect__c</columns>
        <columns>Field_Sales_Project__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Sales_Rep__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Source__c</columns>
        <columns>Status__c</columns>
        <columns>OneSFid__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,In progress</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Field_Sales_Project_Members__c.Outside_Sales_Lead</value>
        </filters>
        <filters>
            <field>CreatedByMyDirectReports__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Open Sales Leads CREATED by my team</label>
    </listViews>
    <listViews>
        <fullName>My_OPEN_Peer_to_Peer_Sales_Leads</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Category__c</columns>
        <columns>Brand__c</columns>
        <columns>Account_City__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Source__c</columns>
        <columns>Field_Sales_Project__c</columns>
        <columns>Hot_prospect__c</columns>
        <columns>OneSFid__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,In progress,Parked</value>
        </filters>
        <filters>
            <field>MyLead__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Field_Sales_Project_Members__c.Outside_Sales_Lead</value>
        </filters>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>Peer to peer</value>
        </filters>
        <label>My OPEN Peer to Peer Sales Leads (I own)</label>
        <sharedTo>
            <role>DNA_CRMANALYST</role>
            <roleAndSubordinatesInternal>US_Solutions</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Open_Leads</fullName>
        <columns>ChannelPriority__c</columns>
        <columns>Channel__c</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Category__c</columns>
        <columns>Brand__c</columns>
        <columns>CampaignTargetList__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Sales_Rep__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Source__c</columns>
        <columns>Status__c</columns>
        <columns>OneSFid__c</columns>
        <columns>Account_State_Province__c</columns>
        <columns>AccountVisitingCity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,In progress,Parked/OnHold</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Field_Sales_Project_Members__c.Outside_Sales_Lead</value>
        </filters>
        <filters>
            <field>MyLead__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Open Sales Leads (More Details)</label>
    </listViews>
    <listViews>
        <fullName>My_Open_Program_Target_List_Leads</fullName>
        <columns>Priority__c</columns>
        <columns>NAME</columns>
        <columns>OneSFid__c</columns>
        <columns>Account__c</columns>
        <columns>Account_City__c</columns>
        <columns>Status__c</columns>
        <columns>Category__c</columns>
        <columns>Brand__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Field_Sales_Project__c</columns>
        <columns>Source__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,In progress,Parked/OnHold</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Field_Sales_Project_Members__c.Outside_Sales_Lead</value>
        </filters>
        <filters>
            <field>MyLead__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Field_Sales_Project__c</field>
            <operation>contains</operation>
            <value>SureSmile Target List</value>
        </filters>
        <label>NA: My Open SureSmile Target Leads</label>
        <sharedTo>
            <roleAndSubordinatesInternal>NA_CRM_Analyst</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Open_Sales_Leads_Ad_hoc_Analysis</fullName>
        <booleanFilter>1 AND 2 AND 3 AND (4 OR 5)</booleanFilter>
        <columns>Priority__c</columns>
        <columns>NAME</columns>
        <columns>OneSFid__c</columns>
        <columns>Account__c</columns>
        <columns>Account_City__c</columns>
        <columns>Account_Postal_Code_Zip__c</columns>
        <columns>Status__c</columns>
        <columns>Category__c</columns>
        <columns>Brand__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Field_Sales_Project__c</columns>
        <columns>Source__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,In progress</value>
        </filters>
        <filters>
            <field>MyLead__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Field_Sales_Project_Members__c.Outside_Sales_Lead</value>
        </filters>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>Target Analysis</value>
        </filters>
        <filters>
            <field>Channel__c</field>
            <operation>equals</operation>
            <value>Program List</value>
        </filters>
        <label>My Open Sales Leads - Predictive Targets</label>
        <sharedTo>
            <roleAndSubordinatesInternal>NA_CRM_Analyst</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Open_Sales_Leads_Digital_Marketing</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Category__c</columns>
        <columns>Brand__c</columns>
        <columns>Campaign__c</columns>
        <columns>Account_City__c</columns>
        <columns>Account_Postal_Code_Zip__c</columns>
        <columns>Hot_prospect__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Source__c</columns>
        <columns>Priority__c</columns>
        <columns>OneSFid__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,In progress</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Field_Sales_Project_Members__c.Outside_Sales_Lead</value>
        </filters>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>Email campaign,Trade show,Web Form,Webinar</value>
        </filters>
        <filters>
            <field>MyLead__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Open Sales Leads - Digital Marketing</label>
        <sharedTo>
            <roleAndSubordinatesInternal>DNA_CRMANALYST</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Open_Sales_Leads_Homepage</fullName>
        <columns>ChannelPriority__c</columns>
        <columns>Channel__c</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Brand__c</columns>
        <columns>Status__c</columns>
        <columns>CampaignTargetList__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,In progress,Parked/OnHold</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Field_Sales_Project_Members__c.Outside_Sales_Lead</value>
        </filters>
        <filters>
            <field>MyLead__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Open Sales Leads</label>
    </listViews>
    <listViews>
        <fullName>My_Open_Sales_Leads_inkl_Status</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Account_City__c</columns>
        <columns>Brand__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Hot_prospect__c</columns>
        <columns>Dealer__c</columns>
        <columns>Status__c</columns>
        <columns>Campaign__c</columns>
        <columns>Field_Sales_Project__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Open Sales Leads inkl. Status</label>
        <sharedTo>
            <roleAndSubordinatesInternal>D_A_CH_Managing_Director</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Region_s_Open_Leads</fullName>
        <columns>NAME</columns>
        <columns>Sales_Rep__c</columns>
        <columns>Field_Sales_Project__c</columns>
        <columns>Account__c</columns>
        <columns>Category__c</columns>
        <columns>Brand__c</columns>
        <columns>Account_City__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Hot_prospect__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Source__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,In progress</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Field_Sales_Project_Members__c.Outside_Sales_Lead</value>
        </filters>
        <filters>
            <field>UserCountry__c</field>
            <operation>equals</operation>
            <value>Taiwan</value>
        </filters>
        <label>All Open Leads</label>
        <sharedTo>
            <role>D_A_CH_CRM_Analyst</role>
            <role>Dentsply_IH_CEO</role>
            <role>NA_CRM_Analyst</role>
            <roleAndSubordinates>DNA_CRMANALYST</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_teams_created_OPEN_PEER_to_PEER_Leads</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Category__c</columns>
        <columns>Brand__c</columns>
        <columns>Hot_prospect__c</columns>
        <columns>Field_Sales_Project__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Source__c</columns>
        <columns>Account_City__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,In progress,Parked/OnHold</value>
        </filters>
        <filters>
            <field>CreatedByMyDirectReports__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Field_Sales_Project_Members__c.Outside_Sales_Lead</value>
        </filters>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>Peer to peer</value>
        </filters>
        <label>My teams created OPEN PEER to PEER Leads</label>
        <sharedTo>
            <role>NA_CRM_Analyst</role>
            <roleAndSubordinatesInternal>US_Solutions</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>Ld-{0000000}</displayFormat>
        <label>LD ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Leads</pluralLabel>
    <recordTypes>
        <fullName>Inside_Sales_Lead</fullName>
        <active>true</active>
        <label>Inside Sales Lead</label>
    </recordTypes>
    <recordTypes>
        <fullName>Outside_Sales_Lead</fullName>
        <active>true</active>
        <label>Outside Sales Lead</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Completed_Sales_Lead</fullName>
        <active>true</active>
        <description>Do not allow to set a Sales Lead to completed if the Sales Lead has no relation to an Order, Opportunity or Account Program (Member)</description>
        <errorConditionFormula>( !ISPICKVAL(Account__r.Country__c ,&apos;BE&apos;))
&amp;&amp;
( !ISPICKVAL(Account__r.Country__c ,&apos;NL&apos;))
&amp;&amp;
( !ISPICKVAL(Account__r.Country__c ,&apos;LU&apos;))
&amp;&amp;
( !ISPICKVAL(Account__r.Country__c, &apos;DE&apos;))
&amp;&amp;
(!ISPICKVAL( Account__r.Country__c, &apos;AT&apos;))
&amp;&amp;
( !ISPICKVAL(Account__r.Country__c, &apos;CH&apos;))
&amp;&amp;
( !ISPICKVAL(Account__r.Country__c, &apos;CA&apos;))
&amp;&amp;
( !ISPICKVAL(Account__r.Country__c ,&apos;US&apos;))
&amp;&amp;
(ISCHANGED(Status__c)&amp;&amp;  ISPICKVAL(Status__c, &apos;Completed&apos;) &amp;&amp;(ISBLANK( Opportunity__c ) &amp;&amp; ISBLANK( Order__c ) &amp;&amp; ISBLANK( AccountProgramMember__c )))</errorConditionFormula>
        <errorMessage>a Sales Lead can&apos;t be set as completed manually, without having an Order or an Opportunity or a Program Member.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FreezeConvertedLead</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(PRIORVALUE(Status__c), &apos;Completed&apos;),  OR(ISCHANGED(Status__c), ISCHANGED(Category__c), ISCHANGED(Brand__c), ISCHANGED(Opportunity__c), ISCHANGED(Sales_Rep__c), ISCHANGED(Account__c), ISCHANGED(Contact__c)),
NOT(CONTAINS($User.Profile__c, &apos;#System:&apos;)), /*admin profile exception*/
NOT(CONTAINS($User.Profile__c, &apos;CRM Analyst&apos;)) /*CRM analyst profile exception*/
)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Please note! You are not allowed to change an already converted sales lead.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IT_Convert_Sales_Lead</fullName>
        <active>true</active>
        <errorConditionFormula>(CONTAINS(Sales_Rep__r.UserRole.Name , &quot;RSM&quot;)  ||  CONTAINS(Sales_Rep__r.UserRole.Name , &quot;Sales Specialist&quot;)) &amp;&amp;  TEXT(Status__c)  &lt;&gt; &quot;New&quot; &amp;&amp; 
(
OR(
TEXT( Account__r.Country__c ) = &quot;IT&quot;,
TEXT( Account__r.Country__c ) = &quot;SM&quot;,
TEXT( Account__r.Country__c ) = &quot;VA&quot;))</errorConditionFormula>
        <errorMessage>Solo i Line Specialist possono convertire i Sales Leads. Si prega di assegnare questo Sales Lead al Line specialist</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NoExpiredValue</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT( Status__c )= &apos;Expired&apos; &amp;&amp;
 $User.ProfileId &lt;&gt; &apos;00e6M000001Yjg8&apos; /*All Integration Users Profile*/ &amp;&amp;
 $User.ProfileId &lt;&gt; &apos;00e20000001Ygwu&apos; /*System Administrator Profile*/ &amp;&amp;
 $User.ProfileId &lt;&gt; &apos;00e0J000001cyEC&apos; /*Profisee integration Profile */ &amp;&amp;
 $User.ProfileId &lt;&gt; &apos;00e0J000001R3gF&apos; /*Azure Integration Profile */ &amp;&amp;
 $User.ProfileId &lt;&gt; &apos;00e0J000001Ar8G&apos; /*Integration User Profile */ &amp;&amp;
 $User.ProfileId &lt;&gt; &apos;00e0J000001VElF&apos; /* Profile Integration User - DNA*/ &amp;&amp;
 $User.ProfileId &lt;&gt; &apos;00e0J000001cy6X&apos; /*Terminus intergration Profile */ &amp;&amp;
 $User.ProfileId &lt;&gt; &apos;00e0J000001cy8i&apos; /*System Administrator (CPQ) Profile */</errorConditionFormula>
        <errorMessage>You are not allowed to expire a sales lead. Please select cancel.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OnlyOwnerCanChangeRecord</fullName>
        <active>false</active>
        <description>TEMPORARILY DEACTIVATED 
SALESFORCE LIMITATION: TFUS-000005104</description>
        <errorConditionFormula>AND(
NOT(ISNEW()), 
NOT($User.Id = PRIORVALUE(Sales_Rep__c)),
NOT(CONTAINS($User.Profile__c, &apos;#System:&apos;)),
NOT(CONTAINS($User.Profile__c, &apos;CRM Analyst&apos;)),
NOT($Permission.canEditSalesLeads)
)</errorConditionFormula>
        <errorMessage>Sorry! Only the owner of the sales lead is allowed to change it at this point.</errorMessage>
    </validationRules>
</CustomObject>